# My_Django_Site

./: README.md  pyproject.toml  requirements.txt
MyWebSite/: db.sqlite3
MyWebSite/MyWebSite/: asgi.py  settings.py  urls.py  wsgi.py
MyWebSite/authorization_user/: admin.py  forms.py  models.py  utils.py  views.py
MyWebSite/authorization_user/migrations/: 0001_initial.py
MyWebSite/main/: utils.py  views.py
MyWebSite/templates/: base.html
MyWebSite/templates/authentication_user/: login_user.html  registration_user.html  user_profile.html
MyWebSite/templates/includes/: auth_user_navbar.html  default_navbar.html
MyWebSite/templates/main/: home.html
