[tool.poetry]
name = "my-django-site"
version = "0.1.0"
description = "My Django site"
authors = ["mihaiapostol14"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "^4.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^24.0"
isort = "^5.12.0"
flake8 = "^6.0"
pytest = "^8.0"
pytest-django = "^4.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
